@@ -393,6 +393,9 @@ resources:
 	<LI><TT>Text.background</TT> - The default background
 	color for text fields (color).
 
+	<LI><TT>tooltips</TT> - The default setting for
+	tooltips (boolean).
+
 	<LI><TT>visibleFocus</TT> - The default setting for
 	visible keyboard focus on non-text widgets (boolean).
 
